--- a/src/entries/options/index.html
+++ b/src/entries/options/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Options</title>
+    <title>IDENTI3</title>
   </head>
   <body>
     <div id="app"></div>
